Update AlleleParsers to use new proto schema