@@ -23,13 +23,12 @@ package org.monarchinitiative.exomiser.data.genome.model.parsers;
 import org.junit.jupiter.api.Test;
 import org.monarchinitiative.exomiser.data.genome.model.Allele;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.StringJoiner;
 
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.equalTo;
-import static org.monarchinitiative.exomiser.data.genome.model.AlleleProperty.*;
+import static org.monarchinitiative.exomiser.core.proto.AlleleProto.PathogenicitySource.*;
 
 /**
  * @author Jules Jacobsen <j.jacobsen@qmul.ac.uk>
@@ -51,118 +50,118 @@ public class DbNsfpAlleleParserTest {
             Allele expected = expectedAlleles.get(i);
             assertThat(allele, equalTo(expected));
             assertThat(allele.getRsId(), equalTo(expected.getRsId()));
-            assertThat(allele.getValues(), equalTo(expected.getValues()));
+            assertThat(allele.getPathogenicityScores(), equalTo(expected.getPathogenicityScores()));
         }
     }
 
     @Test
-    public void parseChrZero() throws Exception {
+    public void parseChrZero() {
         String line = lineBuilder().chr19("0").pos19("11").ref("A").alt("T").build();
-        assertParseLineEqualsExpected(DbNsfpColumnIndex.HG19, line, Collections.emptyList());
+        assertParseLineEqualsExpected(DbNsfpColumnIndex.HG19, line, List.of());
     }
 
     @Test
-    public void parseHg19NoScoresNoRsId() throws Exception {
+    public void parseHg19NoScoresNoRsId() {
         String line = lineBuilder().chr("1").pos("10").ref("A").alt("T").chr19("1").pos19("11").build();
-        assertParseLineEqualsExpected(DbNsfpColumnIndex.HG19, line, Collections.emptyList());
+        assertParseLineEqualsExpected(DbNsfpColumnIndex.HG19, line, List.of());
     }
 
     @Test
-    public void parseHg38NoScoresNoRsId() throws Exception {
+    public void parseHg38NoScoresNoRsId() {
         String line = lineBuilder().chr("1").pos("10").ref("A").alt("T").chr19("1").pos19("11").build();
-        assertParseLineEqualsExpected(DbNsfpColumnIndex.HG38, line, Collections.emptyList());
+        assertParseLineEqualsExpected(DbNsfpColumnIndex.HG38, line, List.of());
     }
 
     @Test
-    public void parseHg19NoScoresRsId() throws Exception {
+    public void parseHg19NoScoresRsId() {
         String line = lineBuilder().chr("1").pos("10").ref("A").alt("T").chr19("1").pos19("11")
                 .rs("rs12345")
                 .build();
         Allele allele = new Allele(1, 11, "A", "T");
         allele.setRsId("rs12345");
-        assertParseLineEqualsExpected(DbNsfpColumnIndex.HG19, line, Collections.singletonList(allele));
+        assertParseLineEqualsExpected(DbNsfpColumnIndex.HG19, line, List.of());
     }
 
     @Test
-    public void parseHg38NoScoresRsId() throws Exception {
+    public void parseHg38NoScoresRsId() {
         String line = lineBuilder().chr("1").pos("10").ref("A").alt("T").chr19("1").pos19("11")
                 .rs("rs12345")
                 .build();
         Allele allele = new Allele(1, 10, "A", "T");
         allele.setRsId("rs12345");
-        assertParseLineEqualsExpected(DbNsfpColumnIndex.HG38, line, Collections.singletonList(allele));
+        assertParseLineEqualsExpected(DbNsfpColumnIndex.HG38, line, List.of());
     }
 
     @Test
-    public void parseMultiRsId() throws Exception {
+    public void parseMultiRsId() {
         String line = lineBuilder().chr("1").pos("10").ref("A").alt("T").chr19("1").pos19("11")
                 .rs("rs12345;rs54321")
                 .build();
         Allele allele = new Allele(1, 11, "A", "T");
         allele.setRsId("rs12345");
-        assertParseLineEqualsExpected(DbNsfpColumnIndex.HG19, line, Collections.singletonList(allele));
+        assertParseLineEqualsExpected(DbNsfpColumnIndex.HG19, line, List.of());
     }
 
     @Test
-    public void parseSift() throws Exception {
+    public void parseSift() {
         String line = lineBuilder().chr("1").pos("10").ref("A").alt("T").chr19("1").pos19("11")
                 .sift("0.0")
                 .build();
         Allele allele = new Allele(1, 11, "A", "T");
-        allele.addValue(SIFT, 0f);
-        assertParseLineEqualsExpected(DbNsfpColumnIndex.HG19, line, Collections.singletonList(allele));
+        allele.addPathogenicityScore(Allele.buildPathScore(SIFT, 0f));
+        assertParseLineEqualsExpected(DbNsfpColumnIndex.HG19, line, List.of(allele));
     }
 
     @Test
-    public void parseSiftMultipleValuesReturnsHighest() throws Exception {
+    public void parseSiftMultipleValuesReturnsHighest() {
         String line = lineBuilder().chr("1").pos("10").ref("A").alt("T").chr19("1").pos19("11")
                 .sift("0.0;1.0")
                 .build();
         Allele allele = new Allele(1, 11, "A", "T");
-        allele.addValue(SIFT, 0f);
-        assertParseLineEqualsExpected(DbNsfpColumnIndex.HG19, line, Collections.singletonList(allele));
+        allele.addPathogenicityScore(Allele.buildPathScore(SIFT, 0f));
+        assertParseLineEqualsExpected(DbNsfpColumnIndex.HG19, line, List.of(allele));
     }
 
     @Test
-    public void parsePolyPhen() throws Exception {
+    public void parsePolyPhen() {
         String line = lineBuilder().chr("1").pos("10").ref("A").alt("T").chr19("1").pos19("11")
                 .polyPhen2Hvar("1.0")
                 .build();
         Allele allele = new Allele(1, 11, "A", "T");
-        allele.addValue(POLYPHEN, 1f);
-        assertParseLineEqualsExpected(DbNsfpColumnIndex.HG19, line, Collections.singletonList(allele));
+        allele.addPathogenicityScore(Allele.buildPathScore(POLYPHEN, 1f));
+        assertParseLineEqualsExpected(DbNsfpColumnIndex.HG19, line, List.of(allele));
     }
 
     @Test
-    public void parsePolyPhenMultipleValuesReturnsHighest() throws Exception {
+    public void parsePolyPhenMultipleValuesReturnsHighest() {
         String line = lineBuilder().chr("1").pos("10").ref("A").alt("T").chr19("1").pos19("11")
                 .polyPhen2Hvar("0.998;0.02;0.99")
                 .build();
         Allele allele = new Allele(1, 11, "A", "T");
-        allele.addValue(POLYPHEN, 0.998f);
-        assertParseLineEqualsExpected(DbNsfpColumnIndex.HG19, line, Collections.singletonList(allele));
+        allele.addPathogenicityScore(Allele.buildPathScore(POLYPHEN, 0.998f));
+        assertParseLineEqualsExpected(DbNsfpColumnIndex.HG19, line, List.of(allele));
     }
 
     @Test
-    public void parseMutationTaster() throws Exception {
+    public void parseMutationTaster() {
         String line = lineBuilder().chr("1").pos("10").ref("A").alt("T").chr19("1").pos19("11")
                 .mTasterScore("1")
                 .mTasterPred("D")
                 .build();
         Allele allele = new Allele(1, 11, "A", "T");
-        allele.addValue(MUT_TASTER, 1f);
-        assertParseLineEqualsExpected(DbNsfpColumnIndex.HG19, line, Collections.singletonList(allele));
+        allele.addPathogenicityScore(Allele.buildPathScore(MUTATION_TASTER, 1f));
+        assertParseLineEqualsExpected(DbNsfpColumnIndex.HG19, line, List.of(allele));
     }
 
     @Test
-    public void parseMutationTasterMultipleValuesReturnsHighest() throws Exception {
+    public void parseMutationTasterMultipleValuesReturnsHighest() {
         String line = lineBuilder().chr("1").pos("10").ref("A").alt("T").chr19("1").pos19("11")
                 .mTasterScore("0.880664;1")
                 .mTasterPred("D;D")
                 .build();
         Allele allele = new Allele(1, 11, "A", "T");
-        allele.addValue(MUT_TASTER, 1f);
-        assertParseLineEqualsExpected(DbNsfpColumnIndex.HG19, line, Collections.singletonList(allele));
+        allele.addPathogenicityScore(Allele.buildPathScore(MUTATION_TASTER, 1f));
+        assertParseLineEqualsExpected(DbNsfpColumnIndex.HG19, line, List.of(allele));
     }
 
     @Test
@@ -171,8 +170,8 @@ public class DbNsfpAlleleParserTest {
                 .revelScore("1")
                 .build();
         Allele allele = new Allele(1, 11, "A", "T");
-        allele.addValue(REVEL, 1f);
-        assertParseLineEqualsExpected(DbNsfpColumnIndex.HG19, line, Collections.singletonList(allele));
+        allele.addPathogenicityScore(Allele.buildPathScore(REVEL, 1f));
+        assertParseLineEqualsExpected(DbNsfpColumnIndex.HG19, line, List.of(allele));
     }
 
     @Test
@@ -181,8 +180,8 @@ public class DbNsfpAlleleParserTest {
                 .mCapScore("1")
                 .build();
         Allele allele = new Allele(1, 11, "A", "T");
-        allele.addValue(MCAP, 1f);
-        assertParseLineEqualsExpected(DbNsfpColumnIndex.HG19, line, Collections.singletonList(allele));
+        allele.addPathogenicityScore(Allele.buildPathScore(M_CAP, 1f));
+        assertParseLineEqualsExpected(DbNsfpColumnIndex.HG19, line, List.of(allele));
     }
 
     @Test
@@ -191,8 +190,8 @@ public class DbNsfpAlleleParserTest {
                 .mpcScore("1")
                 .build();
         Allele allele = new Allele(1, 11, "A", "T");
-        allele.addValue(MPC, 1f);
-        assertParseLineEqualsExpected(DbNsfpColumnIndex.HG19, line, Collections.singletonList(allele));
+        allele.addPathogenicityScore(Allele.buildPathScore(MPC, 1f));
+        assertParseLineEqualsExpected(DbNsfpColumnIndex.HG19, line, List.of(allele));
     }
 
     @Test
@@ -201,8 +200,8 @@ public class DbNsfpAlleleParserTest {
                 .mpcScore("1.0;0.5;0.1")
                 .build();
         Allele allele = new Allele(1, 11, "A", "T");
-        allele.addValue(MPC, 1f);
-        assertParseLineEqualsExpected(DbNsfpColumnIndex.HG19, line, Collections.singletonList(allele));
+        allele.addPathogenicityScore(Allele.buildPathScore(MPC, 1f));
+        assertParseLineEqualsExpected(DbNsfpColumnIndex.HG19, line, List.of(allele));
     }
 
     @Test
@@ -211,8 +210,8 @@ public class DbNsfpAlleleParserTest {
                 .mvpScore("1.0")
                 .build();
         Allele allele = new Allele(1, 11, "A", "T");
-        allele.addValue(MVP, 1f);
-        assertParseLineEqualsExpected(DbNsfpColumnIndex.HG19, line, Collections.singletonList(allele));
+        allele.addPathogenicityScore(Allele.buildPathScore(MVP, 1f));
+        assertParseLineEqualsExpected(DbNsfpColumnIndex.HG19, line, List.of(allele));
     }
 
     @Test
@@ -221,8 +220,8 @@ public class DbNsfpAlleleParserTest {
                 .mvpScore("1.0;0.5;0.1")
                 .build();
         Allele allele = new Allele(1, 11, "A", "T");
-        allele.addValue(MVP, 1f);
-        assertParseLineEqualsExpected(DbNsfpColumnIndex.HG19, line, Collections.singletonList(allele));
+        allele.addPathogenicityScore(Allele.buildPathScore(MVP, 1f));
+        assertParseLineEqualsExpected(DbNsfpColumnIndex.HG19, line, List.of(allele));
     }
 
     @Test
@@ -231,8 +230,8 @@ public class DbNsfpAlleleParserTest {
                 .primateAiScore("1")
                 .build();
         Allele allele = new Allele(1, 11, "A", "T");
-        allele.addValue(PRIMATE_AI, 1f);
-        assertParseLineEqualsExpected(DbNsfpColumnIndex.HG19, line, Collections.singletonList(allele));
+        allele.addPathogenicityScore(Allele.buildPathScore(PRIMATE_AI, 1f));
+        assertParseLineEqualsExpected(DbNsfpColumnIndex.HG19, line, List.of(allele));
     }
 
     //##chr	pos(1-based)	ref	alt	aaref	aaalt	rs_dbSNP147	hg19_chr	hg19_pos(1-based)	hg18_chr	hg18_pos(1-based)	genename	cds_strand	refcodon	codonpos	codon_degeneracy	Ancestral_allele	AltaiNeandertal	Denisova	Ensembl_geneid	Ensembl_transcriptid	Ensembl_proteinid	aapos	SIFT_score	SIFT_converted_rankscore	SIFT_pred	Uniprot_acc_Polyphen2	Uniprot_id_Polyphen2	Uniprot_aapos_Polyphen2	Polyphen2_HDIV_score	Polyphen2_HDIV_rankscore	Polyphen2_HDIV_pred	Polyphen2_HVAR_score	Polyphen2_HVAR_rankscore	Polyphen2_HVAR_pred	LRT_score	LRT_converted_rankscore	LRT_pred	LRT_Omega	MutationTaster_score	MutationTaster_converted_rankscore	MutationTaster_pred	MutationTaster_model	MutationTaster_AAE	MutationAssessor_UniprotID	MutationAssessor_variant	MutationAssessor_score	MutationAssessor_score_rankscore	MutationAssessor_pred	FATHMM_score	FATHMM_converted_rankscore	FATHMM_pred	PROVEAN_score	PROVEAN_converted_rankscore	PROVEAN_pred	Transcript_id_VEST3	Transcript_var_VEST3	VEST3_score	VEST3_rankscore	MetaSVM_score	MetaSVM_rankscore	MetaSVM_pred	MetaLR_score	MetaLR_rankscore	MetaLR_pred	Reliability_index	M-CAP_score	M-CAP_rankscore	M-CAP_pred	CADD_raw	CADD_raw_rankscore	CADD_phred	DANN_score	DANN_rankscore	fathmm-MKL_coding_score	fathmm-MKL_coding_rankscore	fathmm-MKL_coding_pred	fathmm-MKL_coding_group	Eigen_coding_or_noncoding	Eigen-raw	Eigen-phred	Eigen-PC-raw	Eigen-PC-phred	Eigen-PC-raw_rankscore	GenoCanyon_score	GenoCanyon_score_rankscore	integrated_fitCons_score	integrated_fitCons_score_rankscore	integrated_confidence_value	GM12878_fitCons_score	GM12878_fitCons_score_rankscore	GM12878_confidence_value	H1-hESC_fitCons_score	H1-hESC_fitCons_score_rankscore	H1-hESC_confidence_value	HUVEC_fitCons_score	HUVEC_fitCons_score_rankscore	HUVEC_confidence_value	GERP++_NR	GERP++_RS	GERP++_RS_rankscore	phyloP100way_vertebrate	phyloP100way_vertebrate_rankscore	phyloP20way_mammalian	phyloP20way_mammalian_rankscore	phastCons100way_vertebrate	phastCons100way_vertebrate_rankscore	phastCons20way_mammalian	phastCons20way_mammalian_rankscore	SiPhy_29way_pi	SiPhy_29way_logOdds	SiPhy_29way_logOdds_rankscore	1000Gp3_AC	1000Gp3_AF	1000Gp3_AFR_AC	1000Gp3_AFR_AF	1000Gp3_EUR_AC	1000Gp3_EUR_AF	1000Gp3_AMR_AC	1000Gp3_AMR_AF	1000Gp3_EAS_AC	1000Gp3_EAS_AF	1000Gp3_SAS_AC	1000Gp3_SAS_AF	TWINSUK_AC	TWINSUK_AF	ALSPAC_AC	ALSPAC_AF	ESP6500_AA_AC	ESP6500_AA_AF	ESP6500_EA_AC	ESP6500_EA_AF	ExAC_AC	ExAC_AF	ExAC_Adj_AC	ExAC_Adj_AF	ExAC_AFR_AC	ExAC_AFR_AF	ExAC_AMR_AC	ExAC_AMR_AF	ExAC_EAS_AC	ExAC_EAS_AF	ExAC_FIN_AC	ExAC_FIN_AF	ExAC_NFE_AC	ExAC_NFE_AF	ExAC_SAS_AC	ExAC_SAS_AF	ExAC_nonTCGA_AC	ExAC_nonTCGA_AF	ExAC_nonTCGA_Adj_AC	ExAC_nonTCGA_Adj_AF	ExAC_nonTCGA_AFR_AC	ExAC_nonTCGA_AFR_AF	ExAC_nonTCGA_AMR_AC	ExAC_nonTCGA_AMR_AF	ExAC_nonTCGA_EAS_AC	ExAC_nonTCGA_EAS_AF	ExAC_nonTCGA_FIN_AC	ExAC_nonTCGA_FIN_AF	ExAC_nonTCGA_NFE_AC	ExAC_nonTCGA_NFE_AF	ExAC_nonTCGA_SAS_AC	ExAC_nonTCGA_SAS_AF	ExAC_nonpsych_AC	ExAC_nonpsych_AF	ExAC_nonpsych_Adj_AC	ExAC_nonpsych_Adj_AF	ExAC_nonpsych_AFR_AC	ExAC_nonpsych_AFR_AF	ExAC_nonpsych_AMR_AC	ExAC_nonpsych_AMR_AF	ExAC_nonpsych_EAS_AC	ExAC_nonpsych_EAS_AF	ExAC_nonpsych_FIN_AC	ExAC_nonpsych_FIN_AF	ExAC_nonpsych_NFE_AC	ExAC_nonpsych_NFE_AF	ExAC_nonpsych_SAS_AC	ExAC_nonpsych_SAS_AF	clinvar_rs	clinvar_clnsig	clinvar_trait	clinvar_golden_stars	Interpro_domain	GTEx_V6_gene	GTEx_V6_tissue
@@ -274,21 +273,21 @@ public class DbNsfpAlleleParserTest {
 
         private static final String HEADER =
                 "#chr\t" +
-                "pos(1-based)\t" +
-                "ref\t" +
-                "alt\t" +
-                "rs_dbSNP147\t" +
-                "hg19_chr\t" +
-                "hg19_pos(1-based)\t" +
-                "SIFT_score\t" +
-                "Polyphen2_HVAR_score\t" +
-                "MutationTaster_score\t" +
-                "MutationTaster_pred\t" +
-                "REVEL_score\t" +
-                "M-CAP_score\t" +
-                "MPC_score\t" +
-                "MVP_score\t" +
-                "PrimateAI_score";
+                        "pos(1-based)\t" +
+                        "ref\t" +
+                        "alt\t" +
+                        "rs_dbSNP147\t" +
+                        "hg19_chr\t" +
+                        "hg19_pos(1-based)\t" +
+                        "SIFT_score\t" +
+                        "Polyphen2_HVAR_score\t" +
+                        "MutationTaster_score\t" +
+                        "MutationTaster_pred\t" +
+                        "REVEL_score\t" +
+                        "M-CAP_score\t" +
+                        "MPC_score\t" +
+                        "MVP_score\t" +
+                        "PrimateAI_score";
 
 
         private String chr = "0";
